feat: add webjs frontend & api for recipe upload
Initial implementation of a mobile-friendly JavaScript web frontend (WhatsForSupper.Import.WebJS) and ASP.NET Core API service (WhatsForSupper.Import.ApiService) for uploading recipes with photos and ratings.

- WebJS: static, mobile-optimized UI, dynamic API config, Docker-ready
- API: POST /api/recipes, stores images & metadata, CORS, Docker-ready
- Shared service defaults for Aspire/cloud-native features
- AppHost for orchestration and service discovery
- Added configuration docs, contributing guide, and code of conduct
- Project structure, .gitignore, .dockerignore, and editorconfig for best practices

This foundational commit enables end-to-end recipe upload with photos and ratings, ready for local, Docker Compose deployments.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,15 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Docker Compose environment-specific files
+docker-compose.synology.yml
+/.vs/whats-for-supper/CopilotIndices/18.0.934.24903
+/.vs/whats-for-supper.slnx/copilot-chat/df136752/sessions
+/.vs/whats-for-supper.slnx/FileContentIndex
+/.vs/whats-for-supper.slnx/v18
+/.vs
+/Experiments/Import/WhatsForSupper.Import/.vs
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/WhatsForSupper.Import.ApiService.csproj.user
+/Experiments/Import/WhatsForSupper.Import/publish-images.ps1
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/appsettings.Development.json
