--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@ docker-compose.synology.yml
 /Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/WhatsForSupper.Import.ApiService.csproj.user
 /Experiments/Import/WhatsForSupper.Import/publish-images.ps1
 /Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/appsettings.Development.json
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/appsettings.Development.json
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.ApiService/recipes
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.Exploration/batches/originals
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.Exploration/originals
+/Experiments/Import/WhatsForSupper.Import/WhatsForSupper.Import.lutconfig
