Refactor agent framework: - Remove the Deterministic class and replace it with a new DeterministicWorkflow class that utilizes an IPromptRepository for prompt management. - Introduce EmbeddedPromptRepository to load prompts from embedded resources. - Update Recipe and RecipeInfo models to include additional properties for schema.org compliance. - Enhance RecipeRepository with methods for creating and managing recipes, including image handling. - Remove unused classes and files related to thumbnail extraction and in-memory storage. - Update tests to reflect changes in the workflow and repository structure. - Add new prompts for recipe extraction, thumbnail generation, and marketing descriptions.

--- a/Experiments/agent framework/src/Agent/Agent.csproj
+++ b/Experiments/agent framework/src/Agent/Agent.csproj
@@ -13,4 +13,10 @@
      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Prompts\extract-recipe-prompt.md" />
+    <EmbeddedResource Include="Prompts\generate-thumbnail-prompt.md" />
+    <EmbeddedResource Include="Prompts\generate-descriptions-and-keywords-prompt.md" />
+  </ItemGroup>
+
 </Project>
